changes to events

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -56,8 +56,9 @@
           Deliverables
         </a>
         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="{{site.baseurl}}/journalpublications/">Journals/Publications</a>
-          <a class="dropdown-item" href="{{site.baseurl}}/conferencepresentations/">Conference/Presentations</a>
+          <a class="dropdown-item" href="{{site.baseurl}}/journals/">Journal publications</a>
+          <a class="dropdown-item" href="{{site.baseurl}}/conferences/">Conference presentations</a>
+          <a class="dropdown-item" href="{{site.baseurl}}/reports/">Reports</a>
         </div>
       </li>
       <li class="nav-item">
@@ -65,6 +66,7 @@
           Events
         </a>
         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="{{site.baseurl}}/mtm/">Midterm meeting</a>
           <a class="dropdown-item" href="{{site.baseurl}}/meetings/">Meetings</a>
           <a class="dropdown-item" href="{{site.baseurl}}/workshops/">Workshops</a>
           <!-- <div class="dropdown-divider"></div>
