--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -58,6 +58,7 @@
         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" href="{{site.baseurl}}/journals/">Journal publications</a>
           <a class="dropdown-item" href="{{site.baseurl}}/conferences/">Conference presentations</a>
+          <a class="dropdown-item" href="{{site.baseurl}}/academics/">Academic Works</a>
           <a class="dropdown-item" href="{{site.baseurl}}/reports/">Reports</a>
         </div>
       </li>
